# dense-physical-map-code

./: .gitignore  0001-Update-README-evaluation-protocol-descriptions.patch  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
annotation/: README.md
annotation/configs/: demo_annotation_config.json
annotation/examples/: demo_annotation.json
annotation/schemas/: annotation_schema.json
annotation/scripts/: __init__.py  audit_scenes_doubao.py  audit_scenes_glm.py  audit_scenes_qwen.py  metallic_ablation_runner_strict_final.py  metallic_generation_ablation_strict_final.py  review_scene_audits_doubao.py  scene_audit_prompts.py  scene_audit_utils.py  validate_annotations.py
data/: README.md
data/samples/annotations/: demo_annotation_record.json  demo_manifest.json
data/samples/images/: README.md
data/splits/: demo_split.json
docs/: ablations.md  annotation.md  comparisons.md  dataset.md  environment.md  install.md  main_experiments.md
experiments/: __init__.py
experiments/ablation/: README.md
experiments/ablation/albedo/: README.md  albedo_ablation_runner.py  (+6 more)
experiments/comparison/: README.md  __init__.py
experiments/main/: README.md  __init__.py
src/: __init__.py
src/common/: __init__.py
src/runners/: __init__.py  experiment_runner.py
tests/: test_ablation_configs.py  test_annotation_schema.py  test_comparison_adapters.py  test_dataset_loading.py  test_main_configs.py
tools/: check_env.py  convert_checkpoints.py  prepare_data.py  summarize_results.py
tools/evaluation/: README.md  eval_albedo_maps.py  eval_depth_maps.py  eval_metallic_maps.py  eval_normal_maps.py  eval_roughness_maps.py
(+124 files in other folders)
