[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dense-physical-map-code"
version = "0.1.0"
description = "Open-source paper code skeleton for dense physical map experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Paper Authors" }
]
dependencies = []

[project.optional-dependencies]
main = [
  "openai",
  "Pillow",
  "requests",
  "volcenginesdkarkruntime",
]
ablation = [
  "numpy",
  "openai",
  "Pillow",
  "requests",
  "volcenginesdkarkruntime",
]
evaluation = [
  "Imath",
  "lpips",
  "numpy",
  "OpenEXR",
  "Pillow",
  "scikit-image",
  "scipy",
  "torch",
]
full = [
  "Imath",
  "lpips",
  "numpy",
  "openai",
  "OpenEXR",
  "Pillow",
  "requests",
  "scikit-image",
  "scipy",
  "torch",
  "volcenginesdkarkruntime",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
